--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div data-ng-hide="!authentification.isAuth" class="col-xs-6">
-                    <a href="#/news">news</a>
+                    <a href="#/articles">news</a>
                 </div>
 
                 <!--
@@ -84,6 +84,7 @@
         <script src="app/services/authService.js"></script>
         <script src="app/services/ordersService.js"></script>
         <script src="app/services/userService.js"></script>
+        <script src="app/services/articleService.js"></script>
 
         <!-- controllers -->
         <script src="app/controllers/homeController.js" charset="utf-8"></script>
@@ -93,6 +94,7 @@
         <script src="app/controllers/refreshController.js"></script>
         <script src="app/controllers/ordersController.js"></script>
         <script src="app/controllers/userController.js"></script>
+        <script src="app/controllers/articleController.js"></script>
 
         <script type="text/javascript">
             var app = {
