only subs articles at the wall

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div data-ng-hide="!authentification.isAuth" class="col-xs-6 header_item">
-                    <a href="#/articles">Wall</a>
+                    <a href="#/articles">WallChat</a>
                 </div>
 
                 <div class="col-xs-3 header_item" data-ng-hide="!authentification.isAuth">
